
name:                app-arch-sandbox
version:             0.1.0.0
synopsis:            A sandbox/prototype project to investigate an architecture
                     for a web application.
license:             MIT
license-file:        LICENSE
author:              Tad Doxsee
maintainer:          doxsee@pacbell.net
copyright:           2013 Tad Doxsee
build-type:          Simple
cabal-version:       >=1.8
homepage:            http://www.github.com/tdox/app-arch-sandbox

executable             app
  main-is:             app.hs
  build-depends:       base          >= 4.5.1.0
                     , ghc-prim      >= 0.2.0.0
                     , bytestring    >= 0.9.2.1
                     , cereal        >= 0.3.5.2
                     , clientsession >= 0.9
                     , cookie        >= 0.4.0.1
                     , errors        >= 1.4.2
                     , http-types    >= 0.8.0
                     , text          >= 0.11.2.0
                     , yesod         >= 1.1.9.3
                     , yesod-auth    >= 1.1.7


executable             system
  main-is:             system.hs
  build-depends:       base          >= 4.5.1.0
                     , ghc-prim      >= 0.2.0.0
                     , bytestring    >= 0.9.2.1
                     , cereal        >= 0.3.5.2
                     , clientsession >= 0.9
                     , cookie        >= 0.4.0.1
                     , containers    >= 0.4.2.1
                     , errors        >= 1.4.2
                     , http-conduit  >= 1.9.3
                     , http-types    >= 0.8.0
                     , text          >= 0.11.2.0
                     , yesod         >= 1.1.9.3
                     , yesod-auth    >= 1.1.7


executable             proxy
  main-is:             proxy.hs
  build-depends:       base               >= 4.5.1.0
                     , ghc-prim           >= 0.2.0.0
                     , bytestring         >= 0.9.2.1
                     , cereal             >= 0.3.5.2
                     , clientsession      >= 0.9
                     , conduit            >= 1.0.4.2
                     , cookie             >= 0.4.0.1
                     , errors             >= 1.4.2
                     , http-conduit       >= 1.9.3
                     , http-reverse-proxy >= 0.1.1.5
                     , http-types         >= 0.8.0
                     , text               >= 0.11.2.0
                     , transformers       >= 0.3.0.0
                     , wai                >= 1.4.0
                     , wai-extra          >= 1.3.4
                     , warp               >= 1.3.8.1
